--- a/Einvite/Dockerfile
+++ b/Einvite/Dockerfile
@@ -5,7 +5,7 @@ RUN powershell -NoProfile -Command \
     Install-WindowsFeature NET-Framework-45-ASPNET; \
     Install-WindowsFeature Web-Asp-Net45; \
     Import-Module IISAdministration; \
-    New-IISSite -Name "MyApp" -PhysicalPath C:\Einvite -BindingInformation "*:8000:"
+    New-IISSite -Name "Einvite" -PhysicalPath C:\Einvite -BindingInformation "*:8000:"
  
 EXPOSE 8000
  
